--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,5 @@
 name: Create Release
 
-
 on:
   push:
     branches:
@@ -11,17 +10,19 @@ on:
 
 jobs:
   build_and_release:
+    permissions:
+      contents: write
     runs-on: windows-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      
+
       - name: Bump version and push tag
         id: tag
         uses: mathieudutour/github-tag-action@v6.2
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}    
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Rust
         uses: actions-rs/toolchain@v1
