--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,26 @@
 name: Create Release
 
+
+# name: Main
+
+# on: push
+
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v4
+#       - name: Build
+#         run: echo ${{ github.sha }} > Release.txt
+#       - name: Test
+#         run: cat Release.txt
+#       - name: Release
+#         uses: softprops/action-gh-release@v2
+#         if: startsWith(github.ref, 'refs/tags/')
+#         with:
+#           files: Release.txt
+
 on:
   push:
     branches:
@@ -43,10 +64,15 @@ jobs:
           body: ${{ steps.tag.outputs.changelog }}
           token: ${{ secrets.GITHUB_TOKEN }}
 
+      # - name: Upload Executable
+        # uses: actions/upload-release-asset@v1
+        # with:
+        #   upload_url: ${{ steps.create_release.outputs.upload_url }}
+        #   asset_path: ./target/release/easy_project_finder.exe
+        #   asset_name: easy_project_finder.exe
+        #   asset_content_type: application/octet-stream
+
       - name: Upload Executable
-        uses: actions/upload-release-asset@v1
+        uses: softprops/action-gh-release@v2
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./target/release/easy_project_finder.exe
-          asset_name: easy_project_finder.exe
-          asset_content_type: application/octet-stream
+          files: ./target/release/easy_project_finder.exe
