--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,26 +1,5 @@
 name: Create Release
 
-
-# name: Main
-
-# on: push
-
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Checkout
-#         uses: actions/checkout@v4
-#       - name: Build
-#         run: echo ${{ github.sha }} > Release.txt
-#       - name: Test
-#         run: cat Release.txt
-#       - name: Release
-#         uses: softprops/action-gh-release@v2
-#         if: startsWith(github.ref, 'refs/tags/')
-#         with:
-#           files: Release.txt
-
 on:
   push:
     branches:
@@ -68,6 +47,7 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ steps.tag.outputs.new_tag }}
-          name: easy_project_finder.exe
+          name: Release ${{ steps.tag.outputs.new_tag }}
           files: ./target/release/easy_project_finder.exe
           prerelease: false
+          make_latest: true
